--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -85,10 +85,6 @@
         flex: 1 0;
     }
 
-    .section__head .text-main {
-        margin-bottom: 6px;
-    }
-
     .section__head.section__head--column .text-main {
         margin-bottom: 0;
     }
@@ -753,7 +749,9 @@
     }
     .hero .heading.lv2 {
         font-size: 72px;
-        line-height: 1.2;
+        font-weight: 700;
+        line-height: 100%;
+        letter-spacing: -2.16px;
     }
 
     .hero__advantages {
@@ -901,15 +899,77 @@
         transform: rotate(0);
     }
 
-    /* Product */
-    .product__head .text-main {
-        margin-bottom: 6px;
+    /* Rules */
+    .rules__head .heading.lv2 {
+        width: 700px;
     }
 
-    .product__content {
+    .rules__head .text-main {
+        width: 41%;
+        margin-left: 66px;
+    }
+
+    .rules__content {
+        margin-top: 80px;
+    }
+
+    .rules__head > * {
+        flex: unset;
+    }
+
+    .rules__features {
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .rules__feature {
+        height: 180px;
         padding: 30px;
-        height: 910px;
-        border-radius: 40px;
+        width: calc((100% - 40px) / 3);
+    }
+
+    .rules__image {
+        margin-top: 20px;
+    }
+
+    /* Sale */
+    .sale__head .text-main {
+        margin-left: 50px;
+        max-width: 616px;
+    }
+
+    .sale__content {
+        margin-top: 80px;
+    }
+
+    .sale__content-text {
+        margin-bottom: 60px;
+        max-width: 524px;
+    }
+
+    .sale__content-images {
+        display: flex;
+        gap: 104px;
+        margin-top: 0;
+    }
+
+    .sale__content-image:first-child {
+        position: relative;
+        left: unset;
+        bottom: unset;
+        width: unset;
+        transform: unset;
+        translate: unset;
+    }
+
+    /* Card */
+    .card__head .text-main p {
+        margin-left: 16px;
+        max-width: 490px;
+    }
+
+    .card__content {
+        margin-top: 80px;
     }
 
     /* Modes */
