--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,8 @@
 
     --krayt-color-title: #1c253d;
     --krayt-color-main-text: #4b505d;
+
+    --krayt-drop-shadow: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.1));
 }
 
 html {
@@ -138,8 +140,8 @@ figure {
 .section__info-right-image {
     margin: 0 -24px -24px -24px;
     transform: translateZ(0);
-    filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.1));
-    -webkit-filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.1));
+    filter: var(--krayt-drop-shadow);
+    -webkit-filter: var(--krayt-drop-shadow);
 }
 
 .section__preview {
@@ -178,8 +180,8 @@ figure {
 
 .section__content-block figure {
     transform: translateZ(0);
-    filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.1));
-    -webkit-filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.1));
+    filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.05));
+    -webkit-filter: drop-shadow(0px 0px 30px rgba(0, 0, 0, 0.05));
 }
 
 .block {
@@ -495,25 +497,26 @@ figure {
 
 /* Notes */
 .notes-mobile {
-    margin-top: 32px;
+    margin-top: 40px;
+    counter-reset: list-counter;
 }
 
 .notes-mobile-item {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    position: relative;
+    padding-left: 20px;
 }
 
 .notes-mobile-item::before {
-    content: "";
-    display: inline-block;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    background-color: #66666a;
-    margin: 8px 10px;
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
+    position: absolute;
+    right: calc(100% - 16px);
+    top: 3px;
+    counter-increment: list-counter; /* Increment counter */
+    content: counter(list-counter) ".";
+    color: var(--krayt-color-main-text);
+    font-size: 16px;
 }
 
 .notes-mobile-item:not(:first-child) {
@@ -807,17 +810,21 @@ figure {
 }
 
 /* Modes */
+.modes .subtitle {
+    margin-bottom: 16px;
+}
+
 .modes__head .buttons {
     display: none;
 }
 
 .modes__content {
-    margin-top: 24px;
+    margin-top: 18px;
 }
 
 .modes__content-item {
-    padding: 24px;
-    height: 220px;
+    padding: 20px;
+    height: 230px;
     position: relative;
     overflow: hidden;
 }
@@ -839,107 +846,110 @@ figure {
     display: flex;
     max-height: 75%;
     transform: translateZ(0);
-    filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.15));
-    -webkit-filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.15));
-    margin-left: 40px;
+    overflow: hidden;
+    border-radius: 16px 0 0 16px;
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
 .modes .swiper-pagination {
     margin-top: 20px;
 }
 
-/* services */
-.services {
-    margin-top: 54px;
-    display: -webkit-box;
-    display: -ms-flexbox;
+/* Similar */
+.similar__content {
+    margin-top: 40px;
+}
+
+.similar__features {
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
     flex-direction: column;
+    gap: 16px;
 }
 
-.services__left {
-    width: 100%;
+.similar__feature {
+    border-radius: 32px;
+    background-color: var(--main-bg);
+    padding: 20px;
 }
 
-.services__right {
-    position: relative;
-    width: 100%;
+.similar__feature-title {
+    margin-bottom: 8px;
 }
 
-.services__right-image {
-    margin: 0 -24px -24px -24px;
+.similar__image {
+    margin-top: 16px;
 }
 
-.services__left .heading.lv3 {
-    margin-bottom: 16px;
+.similar__image img {
+    border-radius: 16px;
+    overflow: hidden;
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
 }
 
-.services__left .text-main:not(:last-child) {
-    margin-bottom: 24px;
+/* Art */
+.art__content {
+    margin-top: 40px;
 }
 
-/* important */
-.important__head .heading.lv3 {
-    margin-bottom: 16px;
-}
-
-.important__head {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-}
-
-.important__content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    row-gap: 10px;
-    margin-top: 32px;
-}
-
-.important__content-block {
-    width: 100%;
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-}
-
-.important__content-block:nth-child(1) .important__content-image {
-    margin: 0 -24px -24px -24px;
-}
-
-.important__content-image.important__content-image-desktop {
+.art__content .heading.lv3 {
     display: none;
 }
 
-.important__content-block:nth-child(2) .important__content-image {
+.art__content-image {
+    position: relative;
+}
+
+.art__content-image {
     transform: translateZ(0);
-    filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.15));
-    -webkit-filter: drop-shadow(0px 15px 50px rgba(0, 0, 0, 0.15));
+    box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
 }
 
-.important__content-block:nth-child(2) .important__content-image.important__content-image-mobile {
-    margin: 34px -24px 0 0;
+/* Order */
+.order .section__content-block figure {
+    -webkit-filter: unset;
+    filter: unset;
 }
 
-.important__content-block:nth-child(2) .important__content-image.important__content-image-mobile img {
-    float: right;
+.order__wrapper {
+    margin-top: 32px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    row-gap: 24px;
+}
+
+.order__content-images {
+    position: relative;
+}
+
+.order__wrapper .section__content-block {
+    margin-top: 0;
+}
+
+.order__wrapper .section__content-block:nth-child(1) figure {
+    margin-right: -24px;
+    margin-left: -10px;
+}
+
+.order__wrapper .section__content-block:nth-child(1) figure:nth-child(2) {
+    margin-top: -60px;
+    margin-bottom: -6px;
+}
+
+.order__wrapper .section__content-block:nth-child(2) figure:nth-child(1) {
+    transform: translateZ(0);
+    filter: var(--krayt-drop-shadow);
+    -webkit-filter: var(--krayt-drop-shadow);
+}
+
+.order__wrapper .section__content-block:nth-child(2) figure:nth-child(2) {
+    margin: -109px -20px -18px 73px;
 }
 
 /* features */
@@ -1678,39 +1688,6 @@ figure {
 .basket__content-images--mobile figure:nth-child(2) {
     margin-left: -24px;
     margin-top: 24px;
-}
-
-/* Order */
-.order__wrapper {
-    margin-top: 32px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    row-gap: 24px;
-}
-
-.order__content-images {
-    position: relative;
-}
-
-.order__wrapper .section__content-block {
-    margin-top: 0;
-}
-
-.order__wrapper .section__content-block:nth-child(1) figure {
-    margin-right: -24px;
-}
-
-.order__wrapper .section__content-block:nth-child(1) figure:nth-child(2) {
-    margin-top: -20px;
-}
-
-.order__wrapper .section__content-block:nth-child(2) figure:nth-child(2) {
-    margin: -24px -24px 0 24px;
 }
 
 /* Market */
