--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,7 +37,7 @@
     --krayt-spacing-md: 32px;
     --krayt-spacing-lg: 40px;
     --krayt-spacing-xl: 60px;
-    --krayt-spacing-2xl: 60px;
+    --krayt-spacing-2xl: 80px;
 
     /* Border-radius */
     --krayt-radius-xs: 8px;
@@ -529,6 +529,13 @@ figure {
     font-style: italic;
 }
 
+.compliance__right {
+    margin-top: 40px;
+    position: relative;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
 /* Panel */
 .panel {
     margin-top: 54px;
@@ -704,12 +711,19 @@ figure {
 
 .card__content-image {
     position: relative;
+}
+
+.card__content-image figure {
     transform: translateZ(0);
-    filter: drop-shadow(0px 0px 30px 0px rgba(0, 0, 0, 0.05));
-    -webkit-filter: drop-shadow(0px 0px 30px 0px rgba(0, 0, 0, 0.05));
+    filter: var(--krayt-drop-shadow);
+    -webkit-filter: var(--krayt-drop-shadow);
 }
 
 /* Modes */
+.modes {
+    margin-top: -50px;
+}
+
 .modes .subtitle {
     margin-bottom: var(--krayt-spacing-xs);
 }
@@ -750,6 +764,10 @@ figure {
 }
 
 /* Similar */
+.similar {
+    margin-top: -50px;
+}
+
 .similar__content {
     margin-top: var(--krayt-spacing-lg);
 }
@@ -799,6 +817,10 @@ figure {
 }
 
 /* Order */
+.order {
+    margin-top: -50px;
+}
+
 .order .section__content-block figure {
     -webkit-filter: unset;
     filter: unset;
